@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: KERNELVERSION
-# Sat Jan 10 16:46:19 2009
+# Sun Jan 11 14:51:55 2009
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV5=y
@@ -43,7 +43,7 @@ CONFIG_ARCH_NUMBER=526
 CONFIG_APEX_VMA=0x00200000
 CONFIG_KERNEL_LMA=0x00008000
 CONFIG_USE_RAMDISK=y
-CONFIG_RAMDISK_LMA=0x0
+CONFIG_RAMDISK_LMA=0x400000
 CONFIG_SDRAM_BANK0=y
 # CONFIG_SDRAM_BANK1 is not set
 CONFIG_MACH="orion5x"
@@ -130,14 +130,6 @@ CONFIG_NOR_BOOT=y
 # CONFIG_ONENAND_BOOT is not set
 # CONFIG_COMPANION_EVT1_BOOT is not set
 # CONFIG_COMPANION_EVT2_BOOT is not set
-
-#
-# Default Startup
-#
-# CONFIG_AUTOBOOT is not set
-CONFIG_ENV_STARTUP_KERNEL_COPY=y
-# CONFIG_ENV_REGION_KERNEL_SWAP is not set
-# CONFIG_ENV_STARTUP_RAMDISK_COPY is not set
 # CONFIG_ENV_STARTUP_PREFIX_P is not set
 
 #
@@ -151,7 +143,8 @@ CONFIG_ENV_REGION_RAMDISK=""
 #
 CONFIG_ENV_DEFAULT_CMDLINE_OVERRIDE=y
 CONFIG_ENV_DEFAULT_CMDLINE="console=ttyS0,115200 root=/dev/md0 ro BOOT_MODE=normal runintime=14400 serialNo=5561n01d01g72800061j0sb"
-# CONFIG_ENV_DEFAULT_STARTUP_OVERRIDE is not set
+CONFIG_ENV_DEFAULT_STARTUP_OVERRIDE=y
+CONFIG_ENV_DEFAULT_STARTUP="im lo -r $ramdiskaddr $kernelsrc ; wait 20 Booting ... ; boot"
 CONFIG_USES_NOR_BOOTFLASH=y
 CONFIG_RELOCATE_SIMPLE=y
 CONFIG_INLINE_PLATFORM_INITIALIZATION=y
